--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-router": "^1.58.3",
     "@tanstack/router-devtools": "^1.58.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "urql": "^4.1.0"
   }
 }
