--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "type": "module",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "dev": "vite --host",
-    "build": "vite build",
-    "serve": "vite preview",
-    "start": "vite"
+    "dev": "vinxi dev --host",
+    "build": "vinxi build",
+    "start": "vinxi start --host",
+    "graphile": "npx postgraphile"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "@tanstack/router-plugin": "^1.58.4",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.6.2",
     "vite": "^5.4.4"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.58.3",
+    "@tanstack/react-router": "^1.58.9",
     "@tanstack/router-devtools": "^1.58.3",
+    "@tanstack/start": "^1.58.9",
     "grafserv": "^0.1.1-beta.13",
     "graphql-ws": "^5.16.0",
     "h3": "^1.12.0",
+    "postgraphile": "^5.0.0-beta.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "urql": "^4.1.0"
+    "urql": "^4.1.0",
+    "vinxi": "^0.4.3",
+    "ws": "^8.18.0"
   }
 }
