--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "private": true,
     "type": "module",
     "dependencies": {
-      "@tanstack/start": "^1.58.12",
-      "postgraphile": "^5.0.0-beta.29"
+        "@tanstack/start": "^1.58.12",
+        "postgraphile": "^5.0.0-beta.29",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
-      "typescript": "^5.6.2"
+        "@types/ws": "^8.5.12",
+        "typescript": "^5.6.2"
     }
-  }
-  
+}
