--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "@carvajalconsultants/headstart",
-    "private": true,
-    "type": "module",
-    "dependencies": {
-        "@tanstack/start": "^1.58.12",
-        "postgraphile": "^5.0.0-beta.29",
-        "ws": "^8.18.0"
-    },
-    "devDependencies": {
-        "@types/ws": "^8.5.12",
-        "typescript": "^5.6.2"
-    }
+  "name": "@carvajalconsultants/headstart",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "@tanstack/start": "^1.58.12",
+    "postgraphile": "^5.0.0-beta.29",
+    "vinxi": "^0.4.3",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.12",
+    "typescript": "^5.6.2"
+  }
 }
