--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@tanstack/start": "^1.58.12",
-    "postgraphile": "^5.0.0-beta.29",
+    "@tanstack/start": "^1.63.3",
+    "postgraphile": "^5.0.0-beta.32",
+    "urql": "^4.1.0",
     "vinxi": "^0.4.3",
     "ws": "^8.18.0"
   },
