--- a/example/package.json
+++ b/example/package.json
@@ -15,13 +15,16 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@tanstack/react-router": "^1.64.0",
-    "@tanstack/router-zod-adapter": "^1.64.0",
-    "@tanstack/start": "^1.64.0",
+    "@tanstack/react-router": "^1.69.1",
+    "@tanstack/router-zod-adapter": "^1.69.1",
+    "@tanstack/start": "^1.69.2",
     "@urql/exchange-graphcache": "^7.2.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "graphql-ws": "^5.16.0",
+    "postgraphile": "^5.0.0-beta.32",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "urql": "^4.1.0",
     "vinxi": "^0.4.3"
   }
 }
