--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,7 @@
   "name": "example",
   "type": "module",
   "scripts": {
+    "lint": "biome check --write",
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start"
@@ -15,6 +16,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.9.3",
     "@tanstack/react-router": "^1.69.1",
     "@tanstack/router-zod-adapter": "^1.69.1",
     "@tanstack/start": "^1.69.2",
