--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0"
-  },
-  "peerDependencies": {
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5.6.2"
   },
   "dependencies": {
