--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "lint": "biome check --write",
-    "dev": "vinxi dev",
+    "dev": "vinxi dev --host",
     "build": "vinxi build",
     "start": "vinxi start"
   },
