--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@carvajalconsultants/headstart",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Library to assist in integrating PostGraphile with Tanstack Start and URQL.",
   "license": "MIT",
   "author": "Miguel Carvajal <omar@carvajalonline.com>",
@@ -18,6 +18,7 @@
   },
   "peerDependencies": {
     "@tanstack/start": "^1.100.0",
+    "js-cookie": "^3.0.5",
     "postgraphile": "^5.0.0-beta.37",
     "urql": "^4.2.1",
     "vinxi": "^0.5.2"
