--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@carvajalconsultants/headstart",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Library to assist in integrating PostGraphile with Tanstack Start and URQL.",
   "license": "MIT",
   "author": "Miguel Carvajal <omar@carvajalonline.com>",
@@ -9,9 +9,11 @@
   "main": "server.ts",
   "files": [
     "client.ts",
+    "cookies.ts",
     "grafastExchange.ts",
     "graphQLRouteHandler.ts",
-    "server.ts"
+    "server.ts",
+    "serverCookies.ts"
   ],
   "scripts": {
     "lint": "biome check --write"
